--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.3",
     "react-scripts": "^5.0.1",
+    "react-swipeable": "^7.0.2",
     "swiper": "^11.2.7",
     "tailwindcss": "^4.1.5"
   },
